k8s_manifests/nas-postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD_FILE
              value: /etc/postgresql-secrets/postgres-password
          image: postgres
          name: postgresql
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgres-data-vol
            - mountPath: /etc/postgresql-secrets
              name: postgres-password
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: postgres-data-vol
          persistentVolumeClaim:
            claimName: postgresql-pvc
        - name: postgres-password
          secret:
            secretName: postgres-password
