k8s_manifests/nginx-hello-world-deployment.yaml
# https://gist.github.com/sdenel/1bd2c8b5975393ababbcff9b57784e82
# To deploy: kubectl create -f nginx-hello-world-deployment.yaml
# Access it with the API as a proxy:
# $ kubectl proxy
# Then in you browser: http://localhost:8001/api/v1/namespaces/default/services/nginx:/proxy/#!/

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 80
    name: web
  - port: 8443
    targetPort: 8443
    nodePort: 443
    name: secureweb
  selector:
    app: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: docker.io/liverwust/wust_us_k8s:0.0.15
        name: nginx
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 8443
          name: secureweb
        volumeMounts:
        - name: letsencrypt
          mountPath: /letsencrypt
          readOnly: true
      imagePullSecrets:
      - name: my-docker
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: nginx
      volumes:
      - name: letsencrypt
        configMap:
          name: letsencrypt
