k8s_manifests/ejbca.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ejbca-database
  labels:
    app: ejbca-database
  namespace: ejbca
spec:
  ports:
    - port: 3306
  selector:
    app: ejbca-database

---
apiVersion: v1
kind: Service
metadata:
  name: ejbca-node1
  labels:
    app: ejbca-node1
  namespace: ejbca
spec:
  ports:
    - port: 8080
      name: ejbca-node1-http
    - port: 8443
      name: ejbca-node1-https
  selector:
    app: ejbca-node1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejbca-database
  labels:
    app: ejbca-database
  namespace: ejbca
spec:
  selector:
    matchLabels:
      app: ejbca-database
  template:
    metadata:
      labels:
        app: ejbca-database
    spec:
      containers:
        - name: ejbca-database
          image: library/mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: ejbca-database
              mountPath: /var/lib/mysql
      volumes:
        - name: ejbca-database
          persistentVolumeClaim:
            claimName: ejbca-database

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ejbca-node1
  labels:
    app: ejbca-node1
  namespace: ejbca
spec:
  selector:
    matchLabels:
      app: ejbca-node1
  template:
    metadata:
      labels:
        app: ejbca-node1
    spec:
      containers:
        - name: ejbca-node1
          image: keyfactor/ejbca-ce:latest
          ports:
            - containerPort: 3306
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ejbca-web-topdir
  namespace: ejbca
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - name: ejbca-node1
          port: 8080
